# doyou

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml  doyou.geany  package-lock.json  package.json  styles.css  tailwind.css
.helix/: config.toml  languages.toml
assets/: tailwind.css
common/: Cargo.toml  common.rs
commons/: Cargo.toml
src/: app.rs  call_api.rs  config.rs  main.rs  music_player.rs  providers.rs  route.rs  servers.rs  services.rs  types.rs
src-oxapy/: main.py  models.py  pyproject.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/common/: config.rs  mod.rs  providers.rs  utils.rs
src/common/components/: alert.rs  alert_message.rs  button.rs  dock.rs  icons.rs  loading.rs  mod.rs  music_list.rs  music_player.rs  navbar.rs  text_input.rs
src/common/context/: alert.rs  favorites.rs  mod.rs  playback.rs  settings.rs
src/components/: dropdown_menu.rs  icons.rs  mod.rs  music_card.rs  music_list.rs  music_player.rs  nav_bar.rs  navbar.rs  player.rs  search_bar.rs  theme_controller.rs
src/components/music_player/: full_music_player.rs  mini_music_player.rs  mod.rs
src/core/: config.rs  mod.rs  playback.rs  utils.rs
src/core/db/: mod.rs  models.rs
src/favorite/: mod.rs
src/home/: mod.rs  music_list.rs  music_player.rs  theme_controller.rs  token_from.rs
src/pages/: home.rs  mod.rs  setting.rs
src/setting/: mod.rs
yt/: Cargo.toml
yt/src/: data_api.rs  extractor.rs  lib.rs
yt/src/data_api/: mod.rs  types.rs
yt/src/extractor/: mod.rs  types.rs
