[package]
name = "doyou"
version = "0.1.0"
authors = ["FITAHIANA Nomeniavo Joe <24nomeniavo@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[workspace]
members = ["yt"]

[workspace.dependencies]
serde_json = "1"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1", features = ["derive"] }

[dependencies]
dioxus = "0.7.3" 
dioxus-sdk-storage = "0.7"
serde_json.workspace = true
reqwest.workspace = true
serde.workspace = true
yt.path = "yt"
ndk-context = "0.1.1"
jni = "0.21.1"

[features]
default = ["mobile"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
